feat: add product card component with image, title, and description feat: implement product carousel component for image display feat: create products table component for admin view feat: define product interface and response structure feat: add product image pipe for handling image URLs feat: implement products service for API interactions feat: create form error label component for form validation feat: add pagination component and service for navigating product lists feat: implement logging interceptor for HTTP requests feat: create front navbar component for navigation feat: set up store front layout with navbar and router outlet feat: implement gender page to display products by gender feat: create home page to showcase all products feat: add not found page for undefined routes feat: implement product page to display individual product details feat: define store front routes for navigation feat: add form utility functions for validation chore: configure environment variables for development and production style: update index.html for theme and Swiper CSS style: enhance global styles with Tailwind and DaisyUI fix: update tsconfig for path mapping to improve module resolution

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@plugin "daisyui";
+@plugin "daisyui" {
+   themes: night;
+}
+
+@theme {
+  --font-montserrat: "Montserrat", sans-serif;
+  --animate-fadeIn: fadeIn 0.3s ease-in-out;
+  @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+  }
+}
+
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("/assets/fonts/montserrat-alternates/montserratalternates-medium.ttf")
+  format("truetype");
+}
+
